# otter

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  coveralls.json  mix.exs
.github/workflows/: linux-x86_64.yml  macos-x86_64.yml
c_src/: nif_utils.hpp  otter_nif.cpp
ci/: repeat-run-mix-test.sh
examples/: ctyes_demo.ex
lib/: Demo.ex  ctypes_demo.ex  otter.ex  otter_errorize.ex  otter_nif.ex
test/: otter_test.exs  test.cpp
